--- a/res/theme/ClasificacionFrm.ui
+++ b/res/theme/ClasificacionFrm.ui
@@ -1,38 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<component type="Form" name="ClasificacionFrm" cloudDestinationProperty="Producto1" flatten="false" layout="BorderLayout" borderLayoutAbsoluteCenter="false" title="Nueva Clasificaci&#xf3;n" >
-  <component type="Tabs" name="Tabs" cloudDestinationProperty="Tabs" flatten="false" >
-    <layoutConstraint value="East" />
-    <custom name="titles" type="java.lang.String" array="true" dimensions="1" >
-      <str>Datos</str>
-      <str>Detalle de Cajas</str>
-      <str>Detalle</str>
+<component type="Form" name="ClasificacionFrm" cloudDestinationProperty="ClasificacionesFrm" layout="BoxLayout" boxLayoutAxis="Y" title="Nueva Clasificaci&#xf3;n" >
+  <component type="TextField" name="modelo" cloudBoundProperty="text" cloudDestinationProperty="TextField" text="" hint="Modelo..." >
+  </component>
+  <component type="Table" name="cajasPorFila" cloudDestinationProperty="Table" >
+    <custom name="data" type="java.lang.String" array="true" dimensions="2" >
+      <arr>        <str>1</str>
+        <str>2</str>
+      </arr>
+      <arr>        <str>3</str>
+        <str>4</str>
+      </arr>
     </custom>
-    <component type="Container" name="Container3" tabTitle="Datos" cloudDestinationProperty="Container3" flatten="false" layout="BorderLayout" borderLayoutAbsoluteCenter="false" >
-      <component type="ComponentGroup" name="ComponentGroup" cloudDestinationProperty="ComponentGroup" >
-        <layoutConstraint value="North" />
-        <component type="TextField" name="modeloC1" cloudBoundProperty="text" cloudDestinationProperty="marca" text="" hint="Modelo" columns="50" >
-        </component>
-      </component>
-      <component type="Button" name="grabarClasificacionC1" cloudDestinationProperty="agregarP1" text="Grabar clasificaci&#xf3;n" >
-        <layoutConstraint value="South" />
-      </component>
-    </component>
-    <component type="Container" name="Container1" tabTitle="Detalle de Cajas" cloudDestinationProperty="Container1" layout="BorderLayout" borderLayoutAbsoluteCenter="false" >
-      <component type="Container" name="Container" cloudDestinationProperty="Container" layout="GridLayout" gridLayoutRows="1" gridLayoutColumns="2" >
-        <layoutConstraint value="North" />
-        <component type="Button" name="agregarDetalleCajasC1" cloudDestinationProperty="agregarClasificaci&#xf3;n" text="Agregar Detalle" >
-        </component>
-        <component type="CheckBox" name="quitarElementoC1" cloudDestinationProperty="CheckBox" text="Quitar" >
-        </component>
-      </component>
-      <component type="MultiList" name="detalleCajasC1" cloudDestinationProperty="detalleCajasC1" >
-        <layoutConstraint value="Center" />
-      </component>
-    </component>
-    <component type="Container" name="Container2" tabTitle="Detalle" cloudDestinationProperty="Container2" layout="BoxLayout" boxLayoutAxis="Y" >
-      <component type="Table" name="cajasTable" cloudDestinationProperty="cajasTable" >
-      </component>
-    </component>
+  </component>
+  <component type="Button" name="grabarClasificacionC" cloudDestinationProperty="Button" text="Grabar clasificaci&#xf3;n" >
   </component>
 </component>
