--- a/res/theme/ControlEmbarqueFrm.ui
+++ b/res/theme/ControlEmbarqueFrm.ui
@@ -3,10 +3,22 @@
 <component type="Form" name="ControlEmbarqueFrm" cloudDestinationProperty="ControlEmbarque2" layout="BoxLayout" boxLayoutAxis="Y" title="Control del Embarque Granel" >
   <component type="Tabs" name="Tabs" cloudDestinationProperty="Tabs" >
     <custom name="titles" type="java.lang.String" array="true" dimensions="1" >
+      <str>Productos</str>
       <str>Inspecci&#xf3;n</str>
       <str>Datos</str>
-      <str>Productos</str>
     </custom>
+    <component type="Container" name="Container2" tabTitle="Productos" cloudDestinationProperty="Container2" snapToGrid="false" flatten="true" layout="BorderLayout" borderLayoutAbsoluteCenter="false" >
+      <component type="Container" name="Container3" cloudDestinationProperty="Container" layout="GridLayout" gridLayoutRows="1" gridLayoutColumns="2" >
+        <layoutConstraint value="North" />
+        <component type="Button" name="agregarProductoCE" cloudDestinationProperty="agregarClasificaci&#xf3;n" text="Agregar Producto" >
+        </component>
+        <component type="CheckBox" name="quitarElementoCE" cloudDestinationProperty="CheckBox" text="Quitar" >
+        </component>
+      </component>
+      <component type="MultiList" name="productos" cloudDestinationProperty="MultiList" >
+        <layoutConstraint value="Center" />
+      </component>
+    </component>
     <component type="Container" name="Container" tabTitle="Inspecci&#xf3;n" cloudDestinationProperty="Container" layout="BoxLayout" boxLayoutAxis="Y" >
       <component type="Table" name="infoCE" cloudDestinationProperty="infoCE" >
       </component>
@@ -34,17 +46,7 @@
         <component type="TextField" name="embalajeCE" cloudBoundProperty="text" cloudDestinationProperty="embalajeCE" text="" hint="Embalaje" >
         </component>
       </component>
-    </component>
-    <component type="Container" name="Container2" tabTitle="Productos" cloudDestinationProperty="Container2" snapToGrid="false" flatten="true" layout="BorderLayout" borderLayoutAbsoluteCenter="false" >
-      <component type="Container" name="Container3" cloudDestinationProperty="Container" layout="GridLayout" gridLayoutRows="1" gridLayoutColumns="2" >
-        <layoutConstraint value="North" />
-        <component type="Button" name="agregarProductoCE" cloudDestinationProperty="agregarClasificaci&#xf3;n" text="Agregar Producto" >
-        </component>
-        <component type="CheckBox" name="quitarElementoCE" cloudDestinationProperty="CheckBox" text="Quitar" >
-        </component>
-      </component>
-      <component type="Container" name="listaProductosCE" cloudDestinationProperty="Container3" layout="BoxLayout" boxLayoutAxis="Y" >
-        <layoutConstraint value="South" />
+      <component type="Button" name="grabarControlEmbarque" cloudDestinationProperty="Button" text="Grabar control de embarque" >
       </component>
     </component>
   </component>
